force-app/main/default/objects/Registration_Location__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>Mapped to Address__c Location field.</description>
    <label>Address Line 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>