force-app/main/default/objects/Registration_Location__c/fields/Attachment_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Attachment_Identifier__c</fullName>
    <description>build formula to identify the attachments that should be requested when a registration location is added. This field is used by the Registration Child Object Attachment Request flow to create attachment requests</description>
    <formula>IF(Registration_Type__c == &#39;Car Wash&#39;, &#39;;BL&#39;, &#39;&#39;)  
&amp; 
IF(Registration_Type__c == &#39;Car Wash&#39;, &#39;;CW-FBNS&#39;, &#39;&#39;)
&amp;
IF(Registration_Type__c == &#39;Janitorial&#39;, &#39;;JS-FBNS&#39;, &#39;&#39;)
&amp;
IF( Registration__r.RecordType.DeveloperName  == &#39;Talent_Agency&#39;, &#39;;TA-PC;TA-BTRC&#39;, &#39;&#39;)</formula>
    <label>Attachment Identifier</label>
    <type>Text</type>
</CustomField>