force-app/main/default/objects/Registration_Location__c/fields/Business_License_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Business_License_Expiration__c</fullName>
    <inlineHelpText>Enter the expiration date of the business license for this location</inlineHelpText>
    <label>Business License Expiration</label>
    <type>Date</type>
</CustomField>