force-app/main/default/objects/Registration_Location__c/fields/Business_License_Invalid__c.field-meta.xml
<CustomField>
    <fullName>Business_License_Invalid__c</fullName>
    <defaultValue>false</defaultValue>
    <description>indicates if the business license for the location is invalid. value is set by time based process and updated when the registration location is updated. This field rolls up to the registration and is is taken into consideration for the renewal process</description>
    <label>Business License Invalid</label>
    <type>Checkbox</type>
</CustomField>