force-app/main/default/objects/Registration_Location__c/fields/Business_License_Number__c.field-meta.xml
<CustomField>
    <fullName>Business_License_Number__c</fullName>
    <inlineHelpText>Business License for the specific location</inlineHelpText>
    <label>Business License Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>