force-app/main/default/objects/Registration_Location__c/fields/Business_Regulatory_Compliance__c.field-meta.xml
<CustomField>
    <fullName>Business_Regulatory_Compliance__c</fullName>
    <description>Does County require compliance with local government requirements?</description>
    <inlineHelpText>Does your county require compliance with local government&#39;s (i.e. city, county, district, etc.) business licensing or regional regulatory requirements that are not issued by the Labor Commissioner?</inlineHelpText>
    <label>Business Regulatory Compliance</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>