force-app/main/default/objects/Registration_Location__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>Mapped to City__c Location field.</description>
    <label>City / Province</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>