force-app/main/default/objects/Registration_Location__c/fields/DBA_Name__c.field-meta.xml
<CustomField>
    <fullName>DBA_Name__c</fullName>
    <description>Mapped to DBA__c Location field.</description>
    <inlineHelpText>If there is no DBA Name, enter N/A for not applicable</inlineHelpText>
    <label>DBA Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>