force-app/main/default/objects/Registration_Location__c/fields/FBNS__c.field-meta.xml
<CustomField>
    <fullName>FBNS__c</fullName>
    <label>FBNS</label>
    <type>TextArea</type>
</CustomField>