force-app/main/default/objects/Registration_Location__c/fields/Latitude__c.field-meta.xml
<CustomField>
    <fullName>Latitude__c</fullName>
    <description>Mapped to Latitude__c Location field.</description>
    <label>Latitude</label>
    <length>20</length>
    <type>Text</type>
</CustomField>