force-app/main/default/objects/Registration_Location__c/fields/Legal_Entity_Name__c.field-meta.xml
<CustomField>
    <fullName>Legal_Entity_Name__c</fullName>
    <formula>Registration__r.Legal_Entity_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Legal Entity Name</label>
    <type>Text</type>
</CustomField>