force-app/main/default/objects/Registration_Location__c/fields/Mobile_Business__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Business__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Mapped to Mobile_Business__c Location field.</description>
    <inlineHelpText>Check if this location is mobile and does not have a permanent physical location.</inlineHelpText>
    <label>Mobile Business</label>
    <type>Checkbox</type>
</CustomField>