force-app/main/default/objects/Registration_Location__c/fields/Phone_Extension__c.field-meta.xml
<CustomField>
    <fullName>Phone_Extension__c</fullName>
    <description>Mapped to Location field Phone_Extension__c</description>
    <inlineHelpText>If there is an extension #, please enter that here.</inlineHelpText>
    <label>Phone Extension</label>
    <length>8</length>
    <type>Text</type>
</CustomField>