force-app/main/default/objects/Registration_Location__c/fields/VIPRegistrationLocations__c.field-meta.xml
<CustomField>
    <fullName>VIPRegistrationLocations__c</fullName>
    <formula>IF( RecordType.DeveloperName = &quot;Registration_Location&quot;, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VIPRegistrationLocations</label>
    <type>Checkbox</type>
</CustomField>