force-app/main/default/objects/Registration_Location__c/fields/Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Zip_Code__c</fullName>
    <description>Mapped to Zip_Code__c Location field.</description>
    <inlineHelpText>U.S. Zip codes must have 5 digits or 9 digits with a dash between the 5th and 6th digit.</inlineHelpText>
    <label>Postal Code</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>