force-app/main/default/objects/Registration_Location__c/recordTypes/Registration_Location.recordType-meta.xml
<RecordType>
    <fullName>Registration_Location</fullName>
    <active>true</active>
    <label>Registration Location</label>
</RecordType>