force-app/main/default/objects/Registration_Location__c/validationRules/Address_cannot_have_PO_Box.validationRule-meta.xml
<ValidationRule>
    <fullName>Address_cannot_have_PO_Box</fullName>
    <active>true</active>
    <description>Does not allow P.O Boxes to be added in address fields.</description>
    <errorConditionFormula>/* Evaluate in these conditions */
(
 (/* Exempt new imported records */
  !ISNEW() &amp;&amp; !ISBLANK(TEXT (Imported_From__c))
 )

/* Or the field value has changed */
||
ISCHANGED ( Address__c )
||
ISCHANGED ( Address_Line_2__c )
)

&amp;&amp;
/* Core of validation rule */
OR( 
CONTAINS(  Address__c , &quot;PO BOX&quot;), 
CONTAINS(  Address_Line_2__c , &quot;PO BOX&quot;), 
CONTAINS( Address__c, &quot;P.O Box&quot;), 
CONTAINS( Address_Line_2__c, &quot;P.O Box&quot;), 
CONTAINS( Address__c, &quot;P.O. Box&quot;), 
CONTAINS( Address_Line_2__c, &quot;P.O. Box&quot;), 
CONTAINS( Address__c, &quot;po box&quot;), 
CONTAINS( Address_Line_2__c, &quot;po box&quot;),  
CONTAINS( Address__c, &quot;P.O. box&quot;), 
CONTAINS( Address_Line_2__c, &quot;P.O. box&quot;), 
CONTAINS( Address__c, &quot;p.o. box&quot;), 
CONTAINS( Address_Line_2__c, &quot;p.o. box&quot;), 
CONTAINS( Address__c, &quot;PO Box&quot;), 
CONTAINS( Address_Line_2__c, &quot;PO Box&quot;),
CONTAINS( Address__c, &quot;PO box&quot;), 
CONTAINS( Address_Line_2__c, &quot;PO box&quot;),
CONTAINS( Address__c, &quot;p. o. box&quot;), 
CONTAINS( Address_Line_2__c, &quot;p. o. box&quot;),
CONTAINS( Address__c, &quot;p o box&quot;), 
CONTAINS( Address_Line_2__c, &quot;p o box&quot;),
CONTAINS( Address__c, &quot;P. O. box&quot;), 
CONTAINS( Address_Line_2__c, &quot;P. O. box&quot;),   
CONTAINS( Address__c, &quot;p o box&quot;), 
CONTAINS( Address_Line_2__c, &quot;p o box&quot;),
CONTAINS( Address__c, &quot;P. O. Box&quot;), 
CONTAINS( Address_Line_2__c, &quot;P. O. Box&quot;),
CONTAINS( Address__c, &quot;P. O. BOX&quot;), 
CONTAINS( Address_Line_2__c, &quot;P. O. BOX&quot;),
CONTAINS( Address__c, &quot;P.O. BOX&quot;), 
CONTAINS( Address_Line_2__c, &quot;P.O. BOX&quot;),
CONTAINS( Address__c, &quot;P.O.Box&quot;), 
CONTAINS( Address_Line_2__c, &quot;P.O.Box&quot;)
)</errorConditionFormula>
    <errorMessage>P.O. Boxes are not accepted addresses. Please change to a physical location before moving forward.</errorMessage>
</ValidationRule>