force-app/main/default/objects/Registration_Location__c/validationRules/Business_License_Required_for_Compliance.validationRule-meta.xml
<ValidationRule>
    <fullName>Business_License_Required_for_Compliance</fullName>
    <active>true</active>
    <description>Business License Expiration is required if Business Regulatory Compliance = Yes</description>
    <errorConditionFormula>/* Evaluate in these conditions */
(
 (/* Exempt new imported records */
  !ISNEW() &amp;&amp; !ISBLANK(TEXT (Imported_From__c))
 )

/* Or the field value has changed */
||
ISCHANGED ( Business_License_Expiration__c )
||
ISCHANGED ( Business_Regulatory_Compliance__c )
)

&amp;&amp;
/* Core of validation rule */

AND(
 ISBLANK(Business_License_Expiration__c ),
ISPICKVAL( Business_Regulatory_Compliance__c , &quot;Yes&quot;)
)</errorConditionFormula>
    <errorDisplayField>Business_License_Expiration__c</errorDisplayField>
    <errorMessage>Please enter the Business License Expiration date for this location.</errorMessage>
</ValidationRule>