force-app/main/default/objects/Registration_Location__c/validationRules/deactivated_date_in_past.validationRule-meta.xml
<ValidationRule>
    <fullName>deactivated_date_in_past</fullName>
    <active>true</active>
    <description>when setting the deactivated date, it must be in the past</description>
    <errorConditionFormula>!ISBLANK( Date_Deactivated__c )
&amp;&amp; Date_Deactivated__c &gt; TODAY()</errorConditionFormula>
    <errorMessage>The date a location is deactivated must be in the past</errorMessage>
</ValidationRule>