force-app/main/default/objects/Registration_Location__c/validationRules/Phone_must_be_10_numbers.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_must_be_10_numbers</fullName>
    <active>true</active>
    <description>Non-US numbers are not formatted to US numbers i.e. (555) 111-0000.</description>
    <errorConditionFormula>/* Evaluate in these conditions */
(
 (/* Exempt new imported records */
  !ISNEW() &amp;&amp; !ISBLANK(TEXT (Imported_From__c))
 )

/* Or the field value has changed */
||
ISCHANGED ( Phone__c )
)

&amp;&amp;
/* Core of validation rule */
AND( 
NOT(ISBLANK(Phone__c)), 
NOT(REGEX( Phone__c , &quot;\\D*?(\\d\\D*?){10}&quot;)),
ISPICKVAL( Country__c , &quot;United States of America&quot;)
)</errorConditionFormula>
    <errorMessage>US phone numbers must be 10 numbers. Please correct to continue.</errorMessage>
</ValidationRule>